--- a/templates/index.html
+++ b/templates/index.html
@@ -177,7 +177,7 @@
                     <input type="text" name="Name" placeholder="Your Name" required><br><br>
                     <input type="text" name="Email" placeholder="Your Email" required><br><br>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea><br><br>
-                    <button type="submit" class="btn2">Submit</button>
+                    <button type="submit" class="btn2">Submit</button>git commit -m "Initial commit"
                 </form>
                 <span id="msg">Hello  </span>
             </div>
